--- a/src/components/Bookmark/Bookmark.css
+++ b/src/components/Bookmark/Bookmark.css
@@ -2,6 +2,7 @@
   border-radius: 10px;
   height: 40px;
   max-width: 200px;
+  width: 48%;
   display: flex;
   text-align: center;
   justify-content: center;
