--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   /*background-color: #580078;*/
   color: #fff700;
   display: flex;
-  padding: 0 32px;
+  /* padding: 0 32px; */
   background-color: #221934;
 }
 
@@ -21,6 +21,12 @@
 
 .header__divider:hover {
   cursor: default;
+}
+
+.header__wrapper {
+  width: 480px;
+  display: flex;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 479px) {
