--- a/src/components/SelectPlace/select-place.css
+++ b/src/components/SelectPlace/select-place.css
@@ -4,7 +4,7 @@
   border-radius: 4px;
   color: #fff;
   height: 40px;
-  width: 200px;
+  width: 49%;
   position: relative;
   top: -1px;
   padding: 0 0 2px 4px;
