--- a/src/components/TrackTile/track-tile.css
+++ b/src/components/TrackTile/track-tile.css
@@ -9,12 +9,12 @@
 }*/
 
 .track-tile {
-  width: 392px;
+  /* width: 392px; */
   height: 88px;
   background-color: #221934;
   display: grid;
-  grid-template-columns: 60px 200px 120px;
-  padding: 12px;
+  grid-template-columns: 60px 270px 120px;
+  padding: 16px;
   margin: 0 0 1px;
   box-sizing: content-box;
 }
@@ -90,7 +90,7 @@
 
 @media screen and (max-width: 479px) {
   .track-tile {
-    width: 282px;
+    width: 280px;
     grid-template-columns: 40px 152px 88px;
     padding: 8px;
   }
